--- a/new_pages/ggplot_tips.qmd
+++ b/new_pages/ggplot_tips.qmd
@@ -889,7 +889,7 @@ This is because the function we are going to use to add a second y-axis, `sec_ax
 To demonstrate this technique we will overlay the epidemic curve with a line of the weekly percent of patients who died. We use this example because the alignment of dates on the x-axis is more complex than say, aligning a bar chart with another plot. Some things to note:  
 
 * The epicurve and the line are aggregated into weeks prior to plotting *and* the `date_breaks` and `date_labels` are identical - we do this so that the x-axes of the two plots are the same when they are overlaid.  
-* The y-axis is created to the right-side for plot 2 with the `sex_axis = ` argument of `scale_y_continuous()`.
+* The y-axis is created to the right-side for plot 2 with the `sec_axis = ` argument of `scale_y_continuous()`.
 
 Note there is another example of this technique in the [Epidemic curves](epicurves.qmd) page - overlaying cumulative incidence on top of the epicurve.  
 
